while_grammar/output/whileParser.java
// $ANTLR 3.5.1 C:\\Users\\Axel\\OneDrive\\Documents\\tlc-projet\\while_grammar\\while.g 2023-11-14 16:49:48

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.debug.*;
import java.io.IOException;
@SuppressWarnings("all")
public class whileParser extends DebugParser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "Dec", "Maj", "Min", "Symbol", 
		"Variable", "WS", "'%'", "'('", "')'", "','", "':'", "':='", "';'", "'=?'", 
		"'cons '", "'do'", "'else'", "'fi'", "'for'", "'foreach'", "'function '", 
		"'hd '", "'if'", "'in'", "'list '", "'nil'", "'nop'", "'od'", "'read'", 
		"'then'", "'tl '", "'while'", "'write '"
	};
	public static final int EOF=-1;
	public static final int T__10=10;
	public static final int T__11=11;
	public static final int T__12=12;
	public static final int T__13=13;
	public static final int T__14=14;
	public static final int T__15=15;
	public static final int T__16=16;
	public static final int T__17=17;
	public static final int T__18=18;
	public static final int T__19=19;
	public static final int T__20=20;
	public static final int T__21=21;
	public static final int T__22=22;
	public static final int T__23=23;
	public static final int T__24=24;
	public static final int T__25=25;
	public static final int T__26=26;
	public static final int T__27=27;
	public static final int T__28=28;
	public static final int T__29=29;
	public static final int T__30=30;
	public static final int T__31=31;
	public static final int T__32=32;
	public static final int T__33=33;
	public static final int T__34=34;
	public static final int T__35=35;
	public static final int T__36=36;
	public static final int Dec=4;
	public static final int Maj=5;
	public static final int Min=6;
	public static final int Symbol=7;
	public static final int Variable=8;
	public static final int WS=9;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public static final String[] ruleNames = new String[] {
		"invalidRule", "lExpr", "input", "command", "expression", "vars", "exprBase", 
		"commands", "output", "function", "startProgram", "definition", "program", 
		"exprs", "inputSub"
	};

	public static final boolean[] decisionCanBacktrack = new boolean[] {
		false, // invalid decision
		false, false, false, false, false, false, false, false, false, false, 
		    false, false, false, false, false, false, false, false, false, false, 
		    false, false, false, false, false, false, false, false, false, false, 
		    false, false, false, false, false, false, false, false, false, false, 
		    false, false, false
	};

 
	public int ruleLevel = 0;
	public int getRuleLevel() { return ruleLevel; }
	public void incRuleLevel() { ruleLevel++; }
	public void decRuleLevel() { ruleLevel--; }
	public whileParser(TokenStream input) {
		this(input, DebugEventSocketProxy.DEFAULT_DEBUGGER_PORT, new RecognizerSharedState());
	}
	public whileParser(TokenStream input, int port, RecognizerSharedState state) {
		super(input, state);
		DebugEventSocketProxy proxy =
			new DebugEventSocketProxy(this, port, null);

		setDebugListener(proxy);
		try {
			proxy.handshake();
		}
		catch (IOException ioe) {
			reportError(ioe);
		}
	}

	public whileParser(TokenStream input, DebugEventListener dbg) {
		super(input, dbg, new RecognizerSharedState());
	}

	protected boolean evalPredicate(boolean result, String predicate) {
		dbg.semanticPredicate(result, predicate);
		return result;
	}

	@Override public String[] getTokenNames() { return whileParser.tokenNames; }
	@Override public String getGrammarFileName() { return "C:\\Users\\Axel\\OneDrive\\Documents\\tlc-projet\\while_grammar\\while.g"; }



	// $ANTLR start "program"
	// C:\\Users\\Axel\\OneDrive\\Documents\\tlc-projet\\while_grammar\\while.g:11:1: program : function ( program )? ;
	public final void program() throws RecognitionException {
		try { dbg.enterRule(getGrammarFileName(), "program");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(11, 0);

		try {
			// C:\\Users\\Axel\\OneDrive\\Documents\\tlc-projet\\while_grammar\\while.g:11:9: ( function ( program )? )
			dbg.enterAlt(1);

			// C:\\Users\\Axel\\OneDrive\\Documents\\tlc-projet\\while_grammar\\while.g:11:11: function ( program )?
			{
			dbg.location(11,11);
			pushFollow(FOLLOW_function_in_program97);
			function();
			state._fsp--;
			dbg.location(11,20);
			// C:\\Users\\Axel\\OneDrive\\Documents\\tlc-projet\\while_grammar\\while.g:11:20: ( program )?
			int alt1=2;
			try { dbg.enterSubRule(1);
			try { dbg.enterDecision(1, decisionCanBacktrack[1]);

			int LA1_0 = input.LA(1);
			if ( (LA1_0==24) ) {
				alt1=1;
			}
			} finally {dbg.exitDecision(1);}

			switch (alt1) {
				case 1 :
					dbg.enterAlt(1);

					// C:\\Users\\Axel\\OneDrive\\Documents\\tlc-projet\\while_grammar\\while.g:11:20: program
					{
					dbg.location(11,20);
					pushFollow(FOLLOW_program_in_program99);
					program();
					state._fsp--;

					}
					break;

			}
			} finally {dbg.exitSubRule(1);}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		dbg.location(11, 27);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "program");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

	}
	// $ANTLR end "program"



	// $ANTLR start "function"
	// C:\\Users\\Axel\\OneDrive\\Documents\\tlc-projet\\while_grammar\\while.g:12:1: function : 'function ' Symbol ( WS )? ':' definition ;
	public final void function() throws RecognitionException {
		try { dbg.enterRule(getGrammarFileName(), "function");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(12, 0);

		try {
			// C:\\Users\\Axel\\OneDrive\\Documents\\tlc-projet\\while_grammar\\while.g:12:9: ( 'function ' Symbol ( WS )? ':' definition )
			dbg.enterAlt(1);

			// C:\\Users\\Axel\\OneDrive\\Documents\\tlc-projet\\while_grammar\\while.g:12:12: 'function ' Symbol ( WS )? ':' definition
			{
			dbg.location(12,12);
			match(input,24,FOLLOW_24_in_function107); dbg.location(12,24);
			match(input,Symbol,FOLLOW_Symbol_in_function109); dbg.location(12,31);
			// C:\\Users\\Axel\\OneDrive\\Documents\\tlc-projet\\while_grammar\\while.g:12:31: ( WS )?
			int alt2=2;
			try { dbg.enterSubRule(2);
			try { dbg.enterDecision(2, decisionCanBacktrack[2]);

			int LA2_0 = input.LA(1);
			if ( (LA2_0==WS) ) {
				alt2=1;
			}
			} finally {dbg.exitDecision(2);}

			switch (alt2) {
				case 1 :
					dbg.enterAlt(1);

					// C:\\Users\\Axel\\OneDrive\\Documents\\tlc-projet\\while_grammar\\while.g:12:31: WS
					{
					dbg.location(12,31);
					match(input,WS,FOLLOW_WS_in_function111); 
					}
					break;

			}
			} finally {dbg.exitSubRule(2);}
			dbg.location(12,34);
			match(input,14,FOLLOW_14_in_function113); dbg.location(12,38);
			pushFollow(FOLLOW_definition_in_function115);
			definition();
			state._fsp--;

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		dbg.location(12, 47);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "function");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

	}
	// $ANTLR end "function"



	// $ANTLR start "definition"
	// C:\\Users\\Axel\\OneDrive\\Documents\\tlc-projet\\while_grammar\\while.g:13:1: definition : 'read' ( WS )? input '%' commands '%' 'write ' output ;
	public final void definition() throws RecognitionException {
		try { dbg.enterRule(getGrammarFileName(), "definition");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(13, 0);

		try {
			// C:\\Users\\Axel\\OneDrive\\Documents\\tlc-projet\\while_grammar\\while.g:13:11: ( 'read' ( WS )? input '%' commands '%' 'write ' output )
			dbg.enterAlt(1);

			// C:\\Users\\Axel\\OneDrive\\Documents\\tlc-projet\\while_grammar\\while.g:13:14: 'read' ( WS )? input '%' commands '%' 'write ' output
			{
			dbg.location(13,14);
			match(input,32,FOLLOW_32_in_definition122); dbg.location(13,22);
			// C:\\Users\\Axel\\OneDrive\\Documents\\tlc-projet\\while_grammar\\while.g:13:22: ( WS )?
			int alt3=2;
			try { dbg.enterSubRule(3);
			try { dbg.enterDecision(3, decisionCanBacktrack[3]);

			int LA3_0 = input.LA(1);
			if ( (LA3_0==WS) ) {
				alt3=1;
			}
			} finally {dbg.exitDecision(3);}

			switch (alt3) {
				case 1 :
					dbg.enterAlt(1);

					// C:\\Users\\Axel\\OneDrive\\Documents\\tlc-projet\\while_grammar\\while.g:13:22: WS
					{
					dbg.location(13,22);
					match(input,WS,FOLLOW_WS_in_definition125); 
					}
					break;

			}
			} finally {dbg.exitSubRule(3);}
			dbg.location(13,26);
			pushFollow(FOLLOW_input_in_definition128);
			input();
			state._fsp--;
			dbg.location(13,32);
			match(input,10,FOLLOW_10_in_definition130); dbg.location(13,36);
			pushFollow(FOLLOW_commands_in_definition132);
			commands();
			state._fsp--;
			dbg.location(13,45);
			match(input,10,FOLLOW_10_in_definition134); dbg.location(13,49);
			match(input,36,FOLLOW_36_in_definition136); dbg.location(13,58);
			pushFollow(FOLLOW_output_in_definition138);
			output();
			state._fsp--;

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		dbg.location(13, 63);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "definition");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

	}
	// $ANTLR end "definition"



	// $ANTLR start "input"
	// C:\\Users\\Axel\\OneDrive\\Documents\\tlc-projet\\while_grammar\\while.g:14:1: input : ( inputSub )? ;
	public final void input() throws RecognitionException {
		try { dbg.enterRule(getGrammarFileName(), "input");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(14, 0);

		try {
			// C:\\Users\\Axel\\OneDrive\\Documents\\tlc-projet\\while_grammar\\while.g:14:7: ( ( inputSub )? )
			dbg.enterAlt(1);

			// C:\\Users\\Axel\\OneDrive\\Documents\\tlc-projet\\while_grammar\\while.g:14:10: ( inputSub )?
			{
			dbg.location(14,10);
			// C:\\Users\\Axel\\OneDrive\\Documents\\tlc-projet\\while_grammar\\while.g:14:10: ( inputSub )?
			int alt4=2;
			try { dbg.enterSubRule(4);
			try { dbg.enterDecision(4, decisionCanBacktrack[4]);

			int LA4_0 = input.LA(1);
			if ( (LA4_0==Variable) ) {
				alt4=1;
			}
			} finally {dbg.exitDecision(4);}

			switch (alt4) {
				case 1 :
					dbg.enterAlt(1);

					// C:\\Users\\Axel\\OneDrive\\Documents\\tlc-projet\\while_grammar\\while.g:14:10: inputSub
					{
					dbg.location(14,10);
					pushFollow(FOLLOW_inputSub_in_input146);
					inputSub();
					state._fsp--;

					}
					break;

			}
			} finally {dbg.exitSubRule(4);}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		dbg.location(14, 18);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "input");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

	}
	// $ANTLR end "input"



	// $ANTLR start "inputSub"
	// C:\\Users\\Axel\\OneDrive\\Documents\\tlc-projet\\while_grammar\\while.g:15:1: inputSub : Variable ( WS )? ( ',' ( WS )? inputSub )? ;
	public final void inputSub() throws RecognitionException {
		try { dbg.enterRule(getGrammarFileName(), "inputSub");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(15, 0);

		try {
			// C:\\Users\\Axel\\OneDrive\\Documents\\tlc-projet\\while_grammar\\while.g:16:2: ( Variable ( WS )? ( ',' ( WS )? inputSub )? )
			dbg.enterAlt(1);

			// C:\\Users\\Axel\\OneDrive\\Documents\\tlc-projet\\while_grammar\\while.g:16:4: Variable ( WS )? ( ',' ( WS )? inputSub )?
			{
			dbg.location(16,4);
			match(input,Variable,FOLLOW_Variable_in_inputSub156); dbg.location(16,13);
			// C:\\Users\\Axel\\OneDrive\\Documents\\tlc-projet\\while_grammar\\while.g:16:13: ( WS )?
			int alt5=2;
			try { dbg.enterSubRule(5);
			try { dbg.enterDecision(5, decisionCanBacktrack[5]);

			int LA5_0 = input.LA(1);
			if ( (LA5_0==WS) ) {
				alt5=1;
			}
			} finally {dbg.exitDecision(5);}

			switch (alt5) {
				case 1 :
					dbg.enterAlt(1);

					// C:\\Users\\Axel\\OneDrive\\Documents\\tlc-projet\\while_grammar\\while.g:16:13: WS
					{
					dbg.location(16,13);
					match(input,WS,FOLLOW_WS_in_inputSub158); 
					}
					break;

			}
			} finally {dbg.exitSubRule(5);}
			dbg.location(16,17);
			// C:\\Users\\Axel\\OneDrive\\Documents\\tlc-projet\\while_grammar\\while.g:16:17: ( ',' ( WS )? inputSub )?
			int alt7=2;
			try { dbg.enterSubRule(7);
			try { dbg.enterDecision(7, decisionCanBacktrack[7]);

			int LA7_0 = input.LA(1);
			if ( (LA7_0==13) ) {
				alt7=1;
			}
			} finally {dbg.exitDecision(7);}

			switch (alt7) {
				case 1 :
					dbg.enterAlt(1);

					// C:\\Users\\Axel\\OneDrive\\Documents\\tlc-projet\\while_grammar\\while.g:16:18: ',' ( WS )? inputSub
					{
					dbg.location(16,18);
					match(input,13,FOLLOW_13_in_inputSub162); dbg.location(16,21);
					// C:\\Users\\Axel\\OneDrive\\Documents\\tlc-projet\\while_grammar\\while.g:16:21: ( WS )?
					int alt6=2;
					try { dbg.enterSubRule(6);
					try { dbg.enterDecision(6, decisionCanBacktrack[6]);

					int LA6_0 = input.LA(1);
					if ( (LA6_0==WS) ) {
						alt6=1;
					}
					} finally {dbg.exitDecision(6);}

					switch (alt6) {
						case 1 :
							dbg.enterAlt(1);

							// C:\\Users\\Axel\\OneDrive\\Documents\\tlc-projet\\while_grammar\\while.g:16:21: WS
							{
							dbg.location(16,21);
							match(input,WS,FOLLOW_WS_in_inputSub163); 
							}
							break;

					}
					} finally {dbg.exitSubRule(6);}
					dbg.location(16,25);
					pushFollow(FOLLOW_inputSub_in_inputSub166);
					inputSub();
					state._fsp--;

					}
					break;

			}
			} finally {dbg.exitSubRule(7);}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		dbg.location(16, 34);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "inputSub");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

	}
	// $ANTLR end "inputSub"



	// $ANTLR start "output"
	// C:\\Users\\Axel\\OneDrive\\Documents\\tlc-projet\\while_grammar\\while.g:17:1: output : Variable ( ',' output )? ;
	public final void output() throws RecognitionException {
		try { dbg.enterRule(getGrammarFileName(), "output");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(17, 0);

		try {
			// C:\\Users\\Axel\\OneDrive\\Documents\\tlc-projet\\while_grammar\\while.g:17:9: ( Variable ( ',' output )? )
			dbg.enterAlt(1);

			// C:\\Users\\Axel\\OneDrive\\Documents\\tlc-projet\\while_grammar\\while.g:17:11: Variable ( ',' output )?
			{
			dbg.location(17,11);
			match(input,Variable,FOLLOW_Variable_in_output176); dbg.location(17,20);
			// C:\\Users\\Axel\\OneDrive\\Documents\\tlc-projet\\while_grammar\\while.g:17:20: ( ',' output )?
			int alt8=2;
			try { dbg.enterSubRule(8);
			try { dbg.enterDecision(8, decisionCanBacktrack[8]);

			int LA8_0 = input.LA(1);
			if ( (LA8_0==13) ) {
				alt8=1;
			}
			} finally {dbg.exitDecision(8);}

			switch (alt8) {
				case 1 :
					dbg.enterAlt(1);

					// C:\\Users\\Axel\\OneDrive\\Documents\\tlc-projet\\while_grammar\\while.g:17:21: ',' output
					{
					dbg.location(17,21);
					match(input,13,FOLLOW_13_in_output179); dbg.location(17,25);
					pushFollow(FOLLOW_output_in_output181);
					output();
					state._fsp--;

					}
					break;

			}
			} finally {dbg.exitSubRule(8);}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		dbg.location(17, 32);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "output");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

	}
	// $ANTLR end "output"



	// $ANTLR start "commands"
	// C:\\Users\\Axel\\OneDrive\\Documents\\tlc-projet\\while_grammar\\while.g:18:1: commands : command ( ';' commands )? ;
	public final void commands() throws RecognitionException {
		try { dbg.enterRule(getGrammarFileName(), "commands");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(18, 0);

		try {
			// C:\\Users\\Axel\\OneDrive\\Documents\\tlc-projet\\while_grammar\\while.g:18:9: ( command ( ';' commands )? )
			dbg.enterAlt(1);

			// C:\\Users\\Axel\\OneDrive\\Documents\\tlc-projet\\while_grammar\\while.g:18:11: command ( ';' commands )?
			{
			dbg.location(18,11);
			pushFollow(FOLLOW_command_in_commands189);
			command();
			state._fsp--;
			dbg.location(18,19);
			// C:\\Users\\Axel\\OneDrive\\Documents\\tlc-projet\\while_grammar\\while.g:18:19: ( ';' commands )?
			int alt9=2;
			try { dbg.enterSubRule(9);
			try { dbg.enterDecision(9, decisionCanBacktrack[9]);

			int LA9_0 = input.LA(1);
			if ( (LA9_0==16) ) {
				alt9=1;
			}
			} finally {dbg.exitDecision(9);}

			switch (alt9) {
				case 1 :
					dbg.enterAlt(1);

					// C:\\Users\\Axel\\OneDrive\\Documents\\tlc-projet\\while_grammar\\while.g:18:20: ';' commands
					{
					dbg.location(18,20);
					match(input,16,FOLLOW_16_in_commands192); dbg.location(18,24);
					pushFollow(FOLLOW_commands_in_commands194);
					commands();
					state._fsp--;

					}
					break;

			}
			} finally {dbg.exitSubRule(9);}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		dbg.location(18, 33);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "commands");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

	}
	// $ANTLR end "commands"



	// $ANTLR start "command"
	// C:\\Users\\Axel\\OneDrive\\Documents\\tlc-projet\\while_grammar\\while.g:19:1: command : ( 'nop' | ( vars ( WS )? ':=' ( WS )? exprs ) | ( 'if' ( WS )? expression ( WS )? 'then' ( WS )? commands ( WS )? ( 'else' ( WS )? commands )? ( WS )? 'fi' ) | ( 'while' ( WS )? expression ( WS )? 'do' ( WS )? commands ( WS )? 'od' ) | ( 'for' ( WS )? expression ( WS )? 'do' ( WS )? commands ( WS )? 'od' ) | ( 'foreach' ( WS )? Variable ( WS )? 'in' ( WS )? expression ( WS )? 'do' ( WS )? commands ( WS )? 'od' ) );
	public final void command() throws RecognitionException {
		try { dbg.enterRule(getGrammarFileName(), "command");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(19, 0);

		try {
			// C:\\Users\\Axel\\OneDrive\\Documents\\tlc-projet\\while_grammar\\while.g:20:2: ( 'nop' | ( vars ( WS )? ':=' ( WS )? exprs ) | ( 'if' ( WS )? expression ( WS )? 'then' ( WS )? commands ( WS )? ( 'else' ( WS )? commands )? ( WS )? 'fi' ) | ( 'while' ( WS )? expression ( WS )? 'do' ( WS )? commands ( WS )? 'od' ) | ( 'for' ( WS )? expression ( WS )? 'do' ( WS )? commands ( WS )? 'od' ) | ( 'foreach' ( WS )? Variable ( WS )? 'in' ( WS )? expression ( WS )? 'do' ( WS )? commands ( WS )? 'od' ) )
			int alt33=6;
			try { dbg.enterDecision(33, decisionCanBacktrack[33]);

			switch ( input.LA(1) ) {
			case 30:
				{
				alt33=1;
				}
				break;
			case Variable:
				{
				alt33=2;
				}
				break;
			case 26:
				{
				alt33=3;
				}
				break;
			case 35:
				{
				alt33=4;
				}
				break;
			case 22:
				{
				alt33=5;
				}
				break;
			case 23:
				{
				alt33=6;
				}
				break;
			default:
				NoViableAltException nvae =
					new NoViableAltException("", 33, 0, input);
				dbg.recognitionException(nvae);
				throw nvae;
			}
			} finally {dbg.exitDecision(33);}

			switch (alt33) {
				case 1 :
					dbg.enterAlt(1);

					// C:\\Users\\Axel\\OneDrive\\Documents\\tlc-projet\\while_grammar\\while.g:20:5: 'nop'
					{
					dbg.location(20,5);
					match(input,30,FOLLOW_30_in_command206); 
					}
					break;
				case 2 :
					dbg.enterAlt(2);

					// C:\\Users\\Axel\\OneDrive\\Documents\\tlc-projet\\while_grammar\\while.g:21:3: ( vars ( WS )? ':=' ( WS )? exprs )
					{
					dbg.location(21,3);
					// C:\\Users\\Axel\\OneDrive\\Documents\\tlc-projet\\while_grammar\\while.g:21:3: ( vars ( WS )? ':=' ( WS )? exprs )
					dbg.enterAlt(1);

					// C:\\Users\\Axel\\OneDrive\\Documents\\tlc-projet\\while_grammar\\while.g:21:4: vars ( WS )? ':=' ( WS )? exprs
					{
					dbg.location(21,4);
					pushFollow(FOLLOW_vars_in_command212);
					vars();
					state._fsp--;
					dbg.location(21,9);
					// C:\\Users\\Axel\\OneDrive\\Documents\\tlc-projet\\while_grammar\\while.g:21:9: ( WS )?
					int alt10=2;
					try { dbg.enterSubRule(10);
					try { dbg.enterDecision(10, decisionCanBacktrack[10]);

					int LA10_0 = input.LA(1);
					if ( (LA10_0==WS) ) {
						alt10=1;
					}
					} finally {dbg.exitDecision(10);}

					switch (alt10) {
						case 1 :
							dbg.enterAlt(1);

							// C:\\Users\\Axel\\OneDrive\\Documents\\tlc-projet\\while_grammar\\while.g:21:9: WS
							{
							dbg.location(21,9);
							match(input,WS,FOLLOW_WS_in_command214); 
							}
							break;

					}
					} finally {dbg.exitSubRule(10);}
					dbg.location(21,12);
					match(input,15,FOLLOW_15_in_command216); dbg.location(21,16);
					// C:\\Users\\Axel\\OneDrive\\Documents\\tlc-projet\\while_grammar\\while.g:21:16: ( WS )?
					int alt11=2;
					try { dbg.enterSubRule(11);
					try { dbg.enterDecision(11, decisionCanBacktrack[11]);

					int LA11_0 = input.LA(1);
					if ( (LA11_0==WS) ) {
						alt11=1;
					}
					} finally {dbg.exitDecision(11);}

					switch (alt11) {
						case 1 :
							dbg.enterAlt(1);

							// C:\\Users\\Axel\\OneDrive\\Documents\\tlc-projet\\while_grammar\\while.g:21:16: WS
							{
							dbg.location(21,16);
							match(input,WS,FOLLOW_WS_in_command217); 
							}
							break;

					}
					} finally {dbg.exitSubRule(11);}
					dbg.location(21,20);
					pushFollow(FOLLOW_exprs_in_command220);
					exprs();
					state._fsp--;

					}

					}
					break;
				case 3 :
					dbg.enterAlt(3);

					// C:\\Users\\Axel\\OneDrive\\Documents\\tlc-projet\\while_grammar\\while.g:22:3: ( 'if' ( WS )? expression ( WS )? 'then' ( WS )? commands ( WS )? ( 'else' ( WS )? commands )? ( WS )? 'fi' )
					{
					dbg.location(22,3);
					// C:\\Users\\Axel\\OneDrive\\Documents\\tlc-projet\\while_grammar\\while.g:22:3: ( 'if' ( WS )? expression ( WS )? 'then' ( WS )? commands ( WS )? ( 'else' ( WS )? commands )? ( WS )? 'fi' )
					dbg.enterAlt(1);

					// C:\\Users\\Axel\\OneDrive\\Documents\\tlc-projet\\while_grammar\\while.g:22:4: 'if' ( WS )? expression ( WS )? 'then' ( WS )? commands ( WS )? ( 'else' ( WS )? commands )? ( WS )? 'fi'
					{
					dbg.location(22,4);
					match(input,26,FOLLOW_26_in_command227); dbg.location(22,9);
					// C:\\Users\\Axel\\OneDrive\\Documents\\tlc-projet\\while_grammar\\while.g:22:9: ( WS )?
					int alt12=2;
					try { dbg.enterSubRule(12);
					try { dbg.enterDecision(12, decisionCanBacktrack[12]);

					int LA12_0 = input.LA(1);
					if ( (LA12_0==WS) ) {
						alt12=1;
					}
					} finally {dbg.exitDecision(12);}

					switch (alt12) {
						case 1 :
							dbg.enterAlt(1);

							// C:\\Users\\Axel\\OneDrive\\Documents\\tlc-projet\\while_grammar\\while.g:22:9: WS
							{
							dbg.location(22,9);
							match(input,WS,FOLLOW_WS_in_command229); 
							}
							break;

					}
					} finally {dbg.exitSubRule(12);}
					dbg.location(22,14);
					pushFollow(FOLLOW_expression_in_command233);
					expression();
					state._fsp--;
					dbg.location(22,26);
					// C:\\Users\\Axel\\OneDrive\\Documents\\tlc-projet\\while_grammar\\while.g:22:26: ( WS )?
					int alt13=2;
					try { dbg.enterSubRule(13);
					try { dbg.enterDecision(13, decisionCanBacktrack[13]);

					int LA13_0 = input.LA(1);
					if ( (LA13_0==WS) ) {
						alt13=1;
					}
					} finally {dbg.exitDecision(13);}

					switch (alt13) {
						case 1 :
							dbg.enterAlt(1);

							// C:\\Users\\Axel\\OneDrive\\Documents\\tlc-projet\\while_grammar\\while.g:22:26: WS
							{
							dbg.location(22,26);
							match(input,WS,FOLLOW_WS_in_command236); 
							}
							break;

					}
					} finally {dbg.exitSubRule(13);}
					dbg.location(22,30);
					match(input,33,FOLLOW_33_in_command239); dbg.location(22,37);
					// C:\\Users\\Axel\\OneDrive\\Documents\\tlc-projet\\while_grammar\\while.g:22:37: ( WS )?
					int alt14=2;
					try { dbg.enterSubRule(14);
					try { dbg.enterDecision(14, decisionCanBacktrack[14]);

					int LA14_0 = input.LA(1);
					if ( (LA14_0==WS) ) {
						alt14=1;
					}
					} finally {dbg.exitDecision(14);}

					switch (alt14) {
						case 1 :
							dbg.enterAlt(1);

							// C:\\Users\\Axel\\OneDrive\\Documents\\tlc-projet\\while_grammar\\while.g:22:37: WS
							{
							dbg.location(22,37);
							match(input,WS,FOLLOW_WS_in_command241); 
							}
							break;

					}
					} finally {dbg.exitSubRule(14);}
					dbg.location(22,41);
					pushFollow(FOLLOW_commands_in_command244);
					commands();
					state._fsp--;
					dbg.location(22,51);
					// C:\\Users\\Axel\\OneDrive\\Documents\\tlc-projet\\while_grammar\\while.g:22:51: ( WS )?
					int alt15=2;
					try { dbg.enterSubRule(15);
					try { dbg.enterDecision(15, decisionCanBacktrack[15]);

					int LA15_0 = input.LA(1);
					if ( (LA15_0==WS) ) {
						alt15=1;
					}
					} finally {dbg.exitDecision(15);}

					switch (alt15) {
						case 1 :
							dbg.enterAlt(1);

							// C:\\Users\\Axel\\OneDrive\\Documents\\tlc-projet\\while_grammar\\while.g:22:51: WS
							{
							dbg.location(22,51);
							match(input,WS,FOLLOW_WS_in_command247); 
							}
							break;

					}
					} finally {dbg.exitSubRule(15);}
					dbg.location(22,55);
					// C:\\Users\\Axel\\OneDrive\\Documents\\tlc-projet\\while_grammar\\while.g:22:55: ( 'else' ( WS )? commands )?
					int alt17=2;
					try { dbg.enterSubRule(17);
					try { dbg.enterDecision(17, decisionCanBacktrack[17]);

					int LA17_0 = input.LA(1);
					if ( (LA17_0==20) ) {
						alt17=1;
					}
					} finally {dbg.exitDecision(17);}

					switch (alt17) {
						case 1 :
							dbg.enterAlt(1);

							// C:\\Users\\Axel\\OneDrive\\Documents\\tlc-projet\\while_grammar\\while.g:22:56: 'else' ( WS )? commands
							{
							dbg.location(22,56);
							match(input,20,FOLLOW_20_in_command251); dbg.location(22,63);
							// C:\\Users\\Axel\\OneDrive\\Documents\\tlc-projet\\while_grammar\\while.g:22:63: ( WS )?
							int alt16=2;
							try { dbg.enterSubRule(16);
							try { dbg.enterDecision(16, decisionCanBacktrack[16]);

							int LA16_0 = input.LA(1);
							if ( (LA16_0==WS) ) {
								alt16=1;
							}
							} finally {dbg.exitDecision(16);}

							switch (alt16) {
								case 1 :
									dbg.enterAlt(1);

									// C:\\Users\\Axel\\OneDrive\\Documents\\tlc-projet\\while_grammar\\while.g:22:63: WS
									{
									dbg.location(22,63);
									match(input,WS,FOLLOW_WS_in_command253); 
									}
									break;

							}
							} finally {dbg.exitSubRule(16);}
							dbg.location(22,67);
							pushFollow(FOLLOW_commands_in_command256);
							commands();
							state._fsp--;

							}
							break;

					}
